updated ref to script

--- a/chart.html
+++ b/chart.html
@@ -282,6 +282,6 @@
   </div>
   <!-- // end clear six--> 
  
-  <script type="text/javascript" src="<?php print drupal_get_path('theme', 'sla');?>/js/search-cases-d3.js"></script>
+  <script type="text/javascript" src="search-cases-d3.js"></script>
 </body>
 </html>
