--- a/chart.html
+++ b/chart.html
@@ -5,7 +5,10 @@
 <title>Untitled Document</title>
 
 <script type="text/javascript" src="nv.d3.js"></script>
-<script type="text/javascript" src="search-cases-d3.js"></script>
+<!--<script type="text/javascript" src="search-cases-d3.js"></script>
+--><script type="text/javascript" src="search-cases-d3-test.js"></script>
+<script type="text/javascript" src="d3.min.js"></script>
+
 </head>
 
 <body>
