-Add capability to set color range for each chart -option to disable clicking on donut chart legend -option to hide legend in vertical graph via d3-Add capability to set color range for each chart -option to disable clicking on donut chart legend -option to hide legend in vertical graph via d3

--- a/chart.html
+++ b/chart.html
@@ -4,15 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>SLA charts</title>
 
+<!-- javascript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js"></script>
-<script type="text/javascript" src="nvd3/nv.d3.js"></script>
-<!--<script type="text/javascript" src="search-cases-d3.js"></script>
--->
-<!--<script type="text/javascript" src="d3.min.js"></script>
--->
 
+<script type="text/javascript" src="nvd3/nv.d3.js"></script>
 <script type="text/javascript" src="sla.d3.js"></script>
-<script type="text/javascript" src="search-cases-d3-test.js"></script>
+
+
+<!-- css -->
  <link rel="stylesheet" type="text/css" href="nvd3/nv.d3.css">
 
  
